<resources>
    <string name="app_name">CodeToy</string>


    <string name="title">登录平台，开启移动教学</string>
    <string name="title1">验证码登录</string>
    <string name="title2">使用微信账号登录</string>

    <string name="main_playset">玩库</string>
    <string name="main_control">控制</string>
    <string name="main_study">学习</string>
    <string name="main_code">编程</string>
    <string name="main_show">乐秀</string>

    <string name="main_ai">智能机器人编程</string>


    <string name="stu_name">姓名</string>
    <string name="stu_gender">性别</string>
    <string name="stu_mark">成绩</string>
    <string name="stu_state">状态</string>

    <string name="stu_point">作业分</string>

    <string name="btn_refuse">拒绝</string>
    <string name="btn_agree">审核通过</string>
    <string name="txt_connecting">设备扫描</string>

    <string name="btn_jump">跳过>></string>
    <string name="btn_add_mission">2018级 八(八)班 新建任务</string>

    <string name="title_mission">一分钟速跳</string>

    <string name="phonenum">手机号:</string>
    <string name="phoneconde">验证码:</string>

    <string name="action_about">About</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_column_chart">ColumnChartActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_bubble_chart">BubbleChartActivity</string>
    <string name="title_activity_preview_line_chart">PreviewLineChartActivity</string>
    <string name="title_activity_preview_column_chart">PreviewColumnChartActivity</string>
    <string name="title_activity_combo_line_column_chart">ComboLineColumnChartActivity</string>
    <string name="title_activity_line_column_dependency">LineColumnDependency</string>
    <string name="title_activity_good_bad">GoodBadActivity</string>
    <string name="title_activity_tempo_chart">TempoChartActivity</string>
    <string name="title_activity_speed_chart">SpeedChartActivity</string>
    <string name="title_activity_view_pager_charts">ViewPagerChartsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_version_label">"Library version "</string>
    <string name="about_author">Leszek Wach 2014</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>
    <string name="title_activity_call_program_acitivity">CallProgramAcitivity</string>
    <string name="add_icon">+</string>


</resources>
