<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_weight="1.8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <ImageView
            android:id="@+id/imageView1101"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/kao" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:text="@string/title" />
    </RelativeLayout>
    <View android:layout_height="1px" android:background="#000000" android:layout_width="fill_parent"
        android:id="@+id/view"></View>
    <RelativeLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:text="@string/phonenum" />

        <EditText

            android:id="@+id/et_login_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="18337133053" />
    </RelativeLayout>
    <View android:layout_height="1px" android:background="#000000" android:layout_width="fill_parent"
        android:id="@+id/view2"></View>
    <RelativeLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:text="@string/phoneconde" />

        <EditText
            android:id="@+id/et_login_phonereturnconde"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView6"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="aabbcc" />

        <Button
            android:id="@+id/btn_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="发送验证码" />
    </RelativeLayout>
    <View android:layout_height="1px" android:background="#000000" android:layout_width="fill_parent"
        android:id="@+id/view3"></View>
    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:text="@string/title1" />

        <Button
            android:id="@+id/btn_weixinlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/title2" />

        <Button
            android:id="@+id/btn_loginout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/btn_weixinlogin"
            android:text="退出当前微信账号" />
    </RelativeLayout>

</LinearLayout>
