<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
       >
        <LinearLayout
            android:id="@+id/zeroLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_my"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/icon_user"/>
            <ImageButton
                android:id="@+id/btn_my22"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/icon_user"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shape_corner_up"
            android:layout_weight="1">
            <TextView
                android:id="@+id/firstTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/main_playset"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/shape_corner_up"
            android:layout_weight="1">
            <TextView
                android:id="@+id/secondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/main_control"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1.5">
            <ToggleButton
                android:layout_marginTop="5dp"
                android:id="@+id/btn_my44"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/tg_btn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/threeLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/shape_corner_up"
            android:layout_weight="1">
            <TextView
                android:id="@+id/threeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/main_study"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/shape_corner_up"
            android:layout_weight="1">
            <TextView
                android:id="@+id/fourthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/main_code"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fivthLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/shape_corner_up"
            android:layout_weight="1">
            <TextView
                android:id="@+id/fivthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/main_show"
                />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>

