<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 首先定义标题栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EBEBEB">
        <TextView
            android:text="标题栏"
            android:id="@+id/text_title"
            android:textSize="21sp"
            android:textColor="#000000"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:drawablePadding="6dp"
            android:background="@drawable/btn_right2"
            android:rotation="180"
            android:ellipsize="end"
            android:gravity="center"
            android:onClick="backtomain"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:visibility="visible" />
        <Button
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:drawablePadding="6dp"
            android:background="@drawable/pointing"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textSize="18dp"
            android:visibility="visible" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/btn_add_mission" />

        <Spinner
            android:id="@+id/spinnerall"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginEnd="44dp"
            android:entries="@array/twostate" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFF00"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/stu_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/stu_gender" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/stu_mark" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/stu_point" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text=" " />
        </LinearLayout>
        <ListView
            android:id="@+id/lv_stuinfoforteach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </LinearLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFF0F5">

        <Button
            android:id="@+id/btn_selectconfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="确认" />

        <TextView
            android:id="@+id/tv_selectedcount"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="已经选择学生 0 人" />
    </RelativeLayout>

</LinearLayout>
